<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/helloView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:text="@string/hello"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/translationDirectionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RusToEng"
        android:textSize="16dp"
        tools:context=".MainActivity" />

    <Button
        android:id="@+id/changeDirectionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:textSize="16dp"
        android:text="@string/changeDirection" />

    <Button
        android:id="@+id/StartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:textSize="36dp"
        android:text="@string/start" />

</LinearLayout>
